[-] * Huawei E160 uses encoded USSD requests.
[+] * Better support for messages on Motorola, thanks to Quintin Hill.
[-] * Fix reading of SMS backups without text (bug #963).
[-] * Send message even if SendingTimeOut is null (bug #977).
[-] * Disabled automatic OBEX for Motorola phones.
[!] * Increased limits for message length, bump soname to 7 because of
      this.
    
20090813 - 1.25.91

[+] * Documented most commands in man page.
[+] * Completed Czech translation of Gammu.
[-] * Avoid crash on some Nokia smses (bug #959).
[+] * Added support for Bluetooth on more BSD systems, thanks to Iain Hibbert.
[+] * Added new command setsmsc.
[+] * Added option to disable checking for battery and signal in SMSD.
    
20090730 - 1.25.90

[-] * Fixed getting firmware revision on AT phones (bug #951).
[+] * Added support for home/work mobile number (bug #952).
[-] * Fixed handling of error response for security status in AT.
[-] * Fixed segfault on systems with very low memory limits.
[!] * Development now goes on in Git repository, please check README.
[!] * 6510 driver now dynamically allocates memory for file caches, what
      reduces Gammu memory usage by 800 MiB.
[-] * Added testcases for AT+CNMI replies.
[-] * Fixed range parsing in AT engine.
[+] * Added reconnect support in PostgreSQL driver in SMSD.
[!] * Gammu debug level no longer can be controlled separately in SMSD.
[-] * Fix loop when Nokia phone does not allow to access files (bug #954).
    
20090709 - 1.25.0

[-] * Retry on timeout of usb transfer (bug #940).
[-] * Disable AT OBEX for Motorola PEBL U6 (bug #939).
[-] * Disable AT OBEX for Samsung J700 (bug #948).
[-] * Empty memory entry has length 0 (bug #947).
[-] * Handle some more fields from Nokia phonebook (bug #946), thanks to Will Sowerbutts.
    
20090624 - 1.24.92

[-] * Fix distutils build (bug #916).
[-] * Detect when phone does not support ATE1 (bug #918).
[-] * Do not use OBEX on Motorola L7 (bug #912).