@@ -382,6 +382,9 @@ Not used by SMSD currently, included only for application usage.
 
 History of schema versions:
 
+11 - all fields for storing message text are no longer limited to 160 chars,
+but are arbitrary length text fields (1.25.92)
+
 10 - DeliveryDateTime is now NULL when message is not delivered, added several
 indexes
 
